[workspace]

members = [
    "common",
    "minerust"
]

[workspace.dependencies]
sdl2 = "0.37.0"
glam = "0.29.0"
glow = "0.14.2"
hecs = "0.10.5"
image = "0.25.2"

[profile.release]
strip = true
lto = true
panic = 'abort'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
